templates/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-world-fr
spec:
  host: hello-world-fr.1-helm-debug.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
