templates/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworldinfo
spec:
  hosts:
  - helloinfo.rm.com
  gateways:
  - hello-world-gateway
  http:
  - match:
    - uri:
        prefix: /de
    route:
    - destination:
        host: hello-world-de.1-helm-debug.svc.cluster.local
        subset: v1
        port:
          number: 8000
  - match:
    - uri:
        prefix: /es
    route:
    - destination:
        host: hello-world-es.1-helm-debug.svc.cluster.local
        subset: v1
        port:
          number: 8000
  - match:
    - uri:
        prefix: /fr
    route:
    - destination:
        host: hello-world-fr.1-helm-debug.svc.cluster.local
        subset: v1
        port:
          number: 8000
